# gentle-hands-on-python

./: .gitignore  00_Python_Cheat_Sheet.ipynb  01_Introduction.ipynb  02_Basics.ipynb  02_Types.ipynb  02_Variables_and_Operators.ipynb  03_Functions.ipynb  03_Print_formatting.ipynb  04_Conditions.ipynb  04_Decisions.ipynb  05_Collections.ipynb  05_Lists_Tuples.ipynb  06_Loops.ipynb  07_Dictionaries.ipynb  07_Wrap_up_exercise.ipynb  08_Dictionaries.ipynb  08_Files.ipynb  09_Files.ipynb  09_Functions.ipynb  09_Plotting.ipynb  10_Conclusion.ipynb  10_Functions.ipynb  10_Functions_extra.ipynb  10_Libraries.ipynb  10_Modules.ipynb  10_Next_Steps.ipynb  11_Conclusion.ipynb  11_Modules.ipynb  11_Plotting.ipynb  12_Plotting.ipynb  13_Next_Steps.ipynb  1_Introduction.ipynb  2_Variables_and_Operators.ipynb  3_Print_formatting.ipynb  4_Conditions.ipynb  5_Lists_Tuples.ipynb  5_Lists_Tuples_Sets.ipynb  6_Loops.ipynb  8_Dictionaries.ipynb  9_Files.ipynb  (+16 more)
course-utilities/: Assign Breakouts.ipynb
data/: BRCA2_ref_protein.fa  HadCRUT.5.0.1.0.analysis.summary_series.global.monthly.csv  Matrix.txt  NC_005816.gb  SampleInfo.txt  aus_data_orig.csv  bel_data_orig.csv  patientA.fa  patientB.fa  readfile.txt  rnaSeq.txt  rus_data_orig.csv  testFile.txt  writefile.txt
docs/: index.html
dodona/: dirconfig.json
extra-course-parts/: 01_First Exercise.ipynb  05_Lists_Tuples_Sets_Extra.ipynb  06_Loops_Extra.ipynb  08_Files_Extra.ipynb  09_Functions_Extra.ipynb  10_Modules_Extra.ipynb  13_Classes.ipynb  14_Asserts_Try_Except.ipynb  5_Lists_Tuples_Sets_Extra.ipynb  Scope.ipynb
scripts/: 1.md  (+3 more)
(+303 files in other folders)
